--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@typescript-eslint/parser": "^5.14.0",
     "axios": "^0.26.1",
     "cypress": "^9.5.1",
-    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.4",
@@ -52,6 +51,9 @@
     "@types/react": "^17.0.40",
     "eslint": "^8.11.0",
     "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-functional": "^4.2.0",
     "typescript": "^4.6.2"
   },
   "*.ts?(x)": [
